[project]
name = "ide-memory-mcp"
version = "0.1.0"
description = "Cross-IDE persistent memory layer for AI coding agents via MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ide-memory-mcp = "ide_memory_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ide_memory_mcp"]
