[project]
name = "ide-memory-mcp"
version = "1.0.0"
description = "Cross-IDE persistent memory layer for AI coding agents via MCP"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Prasanna H", email = "prasanna.000019@gmail.com"},
]
keywords = ["mcp", "ide", "memory", "ai", "coding-assistant", "context"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/prasanna-pmpeople/IDE-Memory-MCP"
Repository = "https://github.com/prasanna-pmpeople/IDE-Memory-MCP"
Issues = "https://github.com/prasanna-pmpeople/IDE-Memory-MCP/issues"

[project.scripts]
ide-memory-mcp = "ide_memory_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ide_memory_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pytest-asyncio]
mode = "auto"


[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
