[project]
name = "postgresql-mcp"
version = "0.2.0"
description = "SchemaIntelligence: AI-powered PostgreSQL database analysis and documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "mcp[cli]>=1.26.0",
    "ollama>=0.6.1",
    "psycopg2>=2.9.11",
    "requests>=2.32.5",
    "pymermaid>=1.7.1",
    "pillow>=12.1.1",
]
